# matrix

./: Cargo.toml
src/: main.rs
src/lib/: colors.rs  linear_interpolation.rs  mod.rs
src/lib/matrix/: determinant.rs  inverse.rs  matrix_multiplication.rs  mod.rs  model.rs  ops.rs  rank.rs  row_echelon.rs  trace.rs  traits.rs  transpose.rs
src/lib/vector/: cosine.rs  cross_product.rs  dot_product.rs  linear_combination.rs  mod.rs  model.rs  norm.rs  ops.rs  traits.rs
src/matrix/: model.rs  ops.rs
src/vector/: mod.rs  model.rs  ops.rs  traits.rs
tests/ex00/: ex00.rs  main.rs
tests/ex01/: ex01.rs
tests/ex02/: ex02.rs  main.rs
tests/ex03/: ex03.rs
tests/ex04/: ex04.rs  main.rs
tests/ex05/: ex05.rs
tests/ex06/: ex06.rs
tests/ex07/: ex07.rs
tests/ex08/: ex08.rs
tests/ex09/: ex09.rs
tests/ex10/: ex10.rs
tests/ex11/: ex11.rs
tests/ex12/: ex12.rs
tests/ex13/: ex13.rs
