[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "matrix"
path = "src/lib/mod.rs"

[[bin]]
name = "ex00"
path = "tests/ex00/main.rs"

[[bin]]
name = "ex01"
path = "tests/ex01/main.rs"

[[bin]]
name = "ex02"
path = "tests/ex02/main.rs"

[[bin]]
name = "ex03"
path = "tests/ex03/main.rs"

[[bin]]
name = "ex04"
path = "tests/ex04/main.rs"

[[bin]]
name = "ex05"
path = "tests/ex05/main.rs"