[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "matrix"
path = "src/lib/mod.rs"

[[bin]]
name = "ex00"
path = "tests/ex00/ex00.rs"

[[bin]]
name = "ex01"
path = "tests/ex01/ex01.rs"

[[bin]]
name = "ex02"
path = "tests/ex02/ex02.rs"

[[bin]]
name = "ex03"
path = "tests/ex03/ex03.rs"

[[bin]]
name = "ex04"
path = "tests/ex04/ex04.rs"

[[bin]]
name = "ex05"
path = "tests/ex05/ex05.rs"

[[bin]]
name = "ex06"
path = "tests/ex06/ex06.rs"

[[bin]]
name = "ex07"
path = "tests/ex07/ex07.rs"

[[bin]]
name = "ex08"
path = "tests/ex08/ex08.rs"

[[bin]]
name = "ex09"
path = "tests/ex09/ex09.rs"

[[bin]]
name = "ex10"
path = "tests/ex10/ex10.rs"

[[bin]]
name = "ex11"
path = "tests/ex11/ex11.rs"

[[bin]]
name = "ex12"
path = "tests/ex12/ex12.rs"